# oatpp-first-steps

./: CMakeLists.txt  db.sqlite  test-db.sqlite
sql/: 001_init.sql
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  SwaggerComponent.hpp
src/controller/: StaticController.hpp  UserController.hpp
src/db/: UserDb.hpp
src/dto/: PageDto.hpp  StatusDto.hpp  UserDto.hpp
src/lib/: MyAuthorizationObject.hpp
src/service/: UserService.cpp  UserService.hpp
test/: UserControllerTest.cpp  UserControllerTest.hpp  tests.cpp
test/app/: MyApiTestClient.hpp  TestClient.hpp  TestComponent.hpp  TestDatabaseComponent.hpp
utility/: install-oatpp-modules.sh
